--- a/src/Frontend/CorresponsaliaBundle/Resources/views/Default/_listadorendicion.html.twig
+++ b/src/Frontend/CorresponsaliaBundle/Resources/views/Default/_listadorendicion.html.twig
@@ -18,6 +18,7 @@
                             <th>Nombre/Razón</th>
                             <th>I. Fiscal</th>
                             <th>Nro Fact.</th>
+                            <th>Moneda</th>
                             <th>Tasa</th>
                             <th>Monto MN.</th>
                             <th>Dólares.</th>
@@ -34,6 +35,7 @@
                                 <td>{{ entity.nombrerazonsocial }}</td>
                                 <td>{{ entity.identificacionfiscal }}</td>
                                 <td>{{ entity.numerofactura }}</td>
+                                <td>{{ entity.tipomoneda.tipomoneda|upper }}</td>
                                 <td>{{ entity.cambio }}</td>
                                 <td>{{ entity.montomonnac }}</td>
                                 <td>{{ entity.montodolar }}</td>
