--- a/src/Frontend/CorresponsaliaBundle/Resources/views/Default/editarendicion.html.twig
+++ b/src/Frontend/CorresponsaliaBundle/Resources/views/Default/editarendicion.html.twig
@@ -9,7 +9,7 @@
     <h2>EDITAR {{ periodo.tipogasto.descripcion|upper }}</h2>
     {% if periodo.descripcionperiodo!='' %}<h4><b>DESCRIPCIÓN: '{{ periodo.descripcionperiodo|upper }}'</b></h4>{% endif %}
     <h4>CORRESPONSALÍA: {{ periodo.corresponsalia.nombre|upper }}</h4>
-    <h4>PAÍS: {{ periodo.corresponsalia.pais.pais|upper }} | AÑO: {{ periodo.anio }} | MES: {{ periodo.mes }} | CAMBIO: {{ cambio.montocambiodolar }}</h4><br>
+    <h4>PAÍS: {{ periodo.corresponsalia.pais.pais|upper }} | AÑO: {{ periodo.anio }} | MES: {{ periodo.mes }} | MONEDA: {{ cambio.tipomoneda.tipomoneda|upper }} | CAMBIO: {{ cambio.montocambiodolar }}</h4><br>
 {% endblock %}
     
 {% block body %}
