Validacion del formulario Equipo y Asignacion a corresponsalia

--- a/src/Frontend/CorresponsaliaBundle/Resources/views/Tecnologia/Equipo/new.html.twig
+++ b/src/Frontend/CorresponsaliaBundle/Resources/views/Tecnologia/Equipo/new.html.twig
@@ -30,7 +30,7 @@
                     data: data,
                     success: function(data) {
                         var $modelo_selector = jQuery('#tecnologia_equipo_modelo');
-                         $modelo_selector.html('<option>Selecciona</option>');
+                         $modelo_selector.html('<option value="">Seleccione</option>');
                         for(var i in data){
                             $modelo_selector.append('<option value="' + data[i].id + '">' + data[i].nombre + '</option>');
                         }
