--- a/src/Frontend/CorresponsaliaBundle/Resources/views/Default/revisionrendicion.html.twig
+++ b/src/Frontend/CorresponsaliaBundle/Resources/views/Default/revisionrendicion.html.twig
@@ -32,6 +32,7 @@
                     <th>Cambio</th>
                     <th>Monto MN.</th>
                     <th>Dólares.</th>
+                    <th>Justificación</th>
                     <th>Acc.</th>
                 </tr>
             </thead>
@@ -49,8 +50,14 @@
                         <td>{{ entity.cambio }}</td>
                         <td>{{ entity.montomonnac }}</td>
                         <td>{{ entity.montodolar }}</td>
-                        
-                        <td><input value="{{ entity.id }}" name="rendiciones[{{entity.id}}]" type="checkbox" {% if entity.aprobada==false %}checked="checked"{% endif %}></td>
+                        {% if entity.aprobada==true %}
+                            <td><textarea disabled="disabled" name="justificacion[{{ entity.id }}]" id="justf{{ entity.id }}"></textarea></td>
+                        {% else %}
+                            <td><textarea name="justificacion[{{ entity.id }}]" id="justf{{ entity.id }}">{{ entity.justificadevolucion }}</textarea></td>
+                        {% endif %}
+
+                        <td><input id="check{{ entity.id }}" onclick="check({{ entity.id }})" value="{{ entity.id }}" name="rendiciones[{{entity.id}}]" type="checkbox" {% if entity.aprobada==false %}checked="checked"{% endif %}></td>
+
                     </tr>
                     {% if entity.aprobada==false %}{% set oculta=1 %}{% endif %}
             {% endfor %}
@@ -69,8 +76,8 @@
         {% if oculta==1 %}
             <form name="formdevolucion" novalidate method="post" action="{{ path('corresponsalia_estatusrendicion',{'idperiodo':periodo.id,'estatus':3 }) }}" onsubmit="return confirm('¿Está seguro que desea devolver esta rendición para su corrección? Recuerde actualizar las rediciones que se deben corregir antes de devolver la rendición!!');">  
                
-               <textarea name="justificadev" placeholder="Describa el error" id="justificadev"></textarea><br>
-               <input type="button" onclick="devolver()" value="DEVOLVER PARA CORRECCIÓN" class="btn btn-danger">
+               <textarea name="justificadev" placeholder="Describa una justificación general" id="justificadev"></textarea><br>
+               <input type="submit" value="DEVOLVER PARA CORRECCIÓN" class="btn btn-danger">
 
             </form> 
         {% endif %}
@@ -93,14 +100,27 @@
               "sPaginationType": "full_numbers", //DAMOS FORMATO A LA PAGINACION(NUMEROS)
               "aaSorting": [[0,'desc']],
           } );
-
-
       })
+
+      //valido que escriban una justificacion
         function devolver(){
             if($('#justificadev').val()=="") alert("Debe justificar la devolución.")
             else
             document.formdevolucion.submit()
 
         }
+
+        //activo y desactivo la justificacion al presionar check
+        function check(id){
+
+            if($("#check"+id).is(":checked")==true){
+                $("#justf"+id).removeAttr("disabled", "disabled");
+                $( "#justf"+id ).focus();
+            } else{
+                $("#justf"+id).val("")
+                $("#justf"+id).attr("disabled", "disabled");
+            }
+        }
+
    </script>
 {% endblock %}
