--- a/web/css/datatable.css
+++ b/web/css/datatable.css
@@ -1,37 +1,3 @@
-/*
- *  File:         demo_table.css
- *  CVS:          $Id$
- *  Description:  CSS descriptions for DataTables demo pages
- *  Author:       Allan Jardine
- *  Created:      Tue May 12 06:47:22 BST 2009
- *  Modified:     $Date$ by $Author$
- *  Language:     CSS
- *  Project:      DataTables
- *
- *  Copyright 2009 Allan Jardine. All Rights Reserved.
- *
- * ***************************************************************************
- * DESCRIPTION
- *
- * The styles given here are suitable for the demos that are used with the standard DataTables
- * distribution (see www.datatables.net). You will most likely wish to modify these styles to
- * meet the layout requirements of your site.
- *
- * Common issues:
- *   'full_numbers' pagination - I use an extra selector on the body tag to ensure that there is
- *     no conflict between the two pagination types. If you want to use full_numbers pagination
- *     ensure that you either have "example_alt_pagination" as a body class name, or better yet,
- *     modify that selector.
- *   Note that the path used for Images is relative. All images are by default located in
- *     ../images/ - relative to this CSS file.
- */
-
-/* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
- * DataTables features
- */
-#tablalista{
-    font-size: 13px;
-}
 .dataTables_length {
 	width: 40%;
         height: 50px;
@@ -42,7 +8,7 @@
 }
 
 .dataTables_filter {
-	width: 100%;
+	width: 98%;
         height: 50px;
 	text-align: right;
 	padding-right: 15px;
@@ -154,8 +120,8 @@ table.display thead th {
 	padding: 3px 18px 3px 10px;
 	font-weight: bold;
 	cursor: pointer;
-	* cursor: hand;
-	color:black;
+	*cursor: hand;
+	//color:black;
 }
 
 table.display tfoot th {
@@ -184,29 +150,41 @@ table.display td.center {
  */
 
 .sorting_asc {
-	background: #85c7f9 url('../images/sort_asc.png') no-repeat center right;
+	background: dodgerblue;
+         color:white;
+         cursor:pointer;
 }
 
 .sorting_desc {
-	background:#85c7f9 url('../images/sort_desc.png') no-repeat center right;
+	background:dodgerblue;
+         color:white;
+         cursor:pointer;
 }
 
 .sorting {
-	background: #85c7f9 url('../images/sort_both.png') no-repeat center right;
-}
-
-.sorting_asc_disabled {
-	background: url('../images/sort_asc_disabled.png') no-repeat center right;
-}
-
-.sorting_desc_disabled {
-	background: url('../images/sort_desc_disabled.png') no-repeat center right;
+	background: dodgerblue;
+        color:white;
+        cursor:pointer;
 }
 
 
 
 
+#tablalista{
+    font-size: 12px;
+}
 
+#tablalista th{
+    text-align: center;
+}
+
+#tablalistaespecial th{
+    text-align: center;
+}
+
+#tabladatatable th{
+	text-align: center;
+}
 /* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
  * DataTables row classes
  */
@@ -312,7 +290,7 @@ td.details {
 }
 
 .paging_full_numbers {
-	width:46%;
+	width:44%;
 	height: 22px;
 	line-height: 22px;
         margin-top: 15px;
@@ -349,141 +327,6 @@ table.display tr.odd.row_selected td {
 	background-color: #9FAFD1;
 }
 
-
-/*
- * Sorting classes for columns
- */
-/* For the standard odd/even */
-tr.odd td.sorting_1 {
-	background-color: #e9f5fe;
-}
-
-tr.odd td.sorting_2 {
-	background-color: #e9f5fe;
-}
-
-tr.odd td.sorting_3 {
-	background-color: #e9f5fe;
-}
-
-tr.even td.sorting_1 {
-	background-color: #f0f8fd;
-}
-
-tr.even td.sorting_2 {
-	background-color: #F2F3FF;
-}
-
-tr.even td.sorting_3 {
-	background-color: #F9F9FF;
-}
-
-
-/* For the Conditional-CSS grading rows */
-/*
- 	Colour calculations (based off the main row colours)
-  Level 1:
-		dd > c4
-		ee > d5
-	Level 2:
-	  dd > d1
-	  ee > e2
- */
-tr.odd.gradeA td.sorting_1 {
-	background-color: #c4ffc4;
-}
-
-tr.odd.gradeA td.sorting_2 {
-	background-color: #d1ffd1;
-}
-
-tr.odd.gradeA td.sorting_3 {
-	background-color: #d1ffd1;
-}
-
-tr.even.gradeA td.sorting_1 {
-	background-color: #d5ffd5;
-}
-
-tr.even.gradeA td.sorting_2 {
-	background-color: #e2ffe2;
-}
-
-tr.even.gradeA td.sorting_3 {
-	background-color: #e2ffe2;
-}
-
-tr.odd.gradeC td.sorting_1 {
-	background-color: #c4c4ff;
-}
-
-tr.odd.gradeC td.sorting_2 {
-	background-color: #d1d1ff;
-}
-
-tr.odd.gradeC td.sorting_3 {
-	background-color: #d1d1ff;
-}
-
-tr.even.gradeC td.sorting_1 {
-	background-color: #d5d5ff;
-}
-
-tr.even.gradeC td.sorting_2 {
-	background-color: #e2e2ff;
-}
-
-tr.even.gradeC td.sorting_3 {
-	background-color: #e2e2ff;
-}
-
-tr.odd.gradeX td.sorting_1 {
-	background-color: #ffc4c4;
-}
-
-tr.odd.gradeX td.sorting_2 {
-	background-color: #ffd1d1;
-}
-
-tr.odd.gradeX td.sorting_3 {
-	background-color: #ffd1d1;
-}
-
-tr.even.gradeX td.sorting_1 {
-	background-color: #ffd5d5;
-}
-
-tr.even.gradeX td.sorting_2 {
-	background-color: #ffe2e2;
-}
-
-tr.even.gradeX td.sorting_3 {
-	background-color: #ffe2e2;
-}
-
-tr.odd.gradeU td.sorting_1 {
-	background-color: #c4c4c4;
-}
-
-tr.odd.gradeU td.sorting_2 {
-	background-color: #d1d1d1;
-}
-
-tr.odd.gradeU td.sorting_3 {
-	background-color: #d1d1d1;
-}
-
-tr.even.gradeU td.sorting_1 {
-	background-color: #d5d5d5;
-}
-
-tr.even.gradeU td.sorting_2 {
-	background-color: #e2e2e2;
-}
-
-tr.even.gradeU td.sorting_3 {
-	background-color: #e2e2e2;
-}
 
 
 /*
@@ -530,32 +373,7 @@ tr.even.gradeU td.sorting_3 {
 }
 
 
-/*
- * KeyTable
- */
-table.KeyTable td {
-	border: 3px solid transparent;
-}
 
-table.KeyTable td.focus {
-	border: 3px solid #3366FF;
-}
-
-table.display tr.gradeA {
-	background-color: #eeffee;
-}
-
-table.display tr.gradeC {
-	background-color: #ddddff;
-}
-
-table.display tr.gradeX {
-	background-color: #ffdddd;
-}
-
-table.display tr.gradeU {
-	background-color: #ddd;
-}
 
 div.box {
 	height: 100px;
