--- a/src/Administracion/UsuarioBundle/Resources/views/Default/login.html.twig
+++ b/src/Administracion/UsuarioBundle/Resources/views/Default/login.html.twig
@@ -16,7 +16,7 @@
     }
     </script>
 
-    <p class="text-info"><marquee scrollamount="3">SE RECOMIENDA EL USO DE CHROME O FIREFOX</marquee></p>
+    <br><p class="text-info"><marquee scrollamount="3">SE RECOMIENDA EL USO DE CHROME O FIREFOX</marquee></p>
 
     <h3><b>BIENVENIDOS AL SISTEMA DE CORRESPONSALÍAS</b></h3><br>
     
