--- a/src/Frontend/CorresponsaliaBundle/Resources/views/Default/inicio.html.twig
+++ b/src/Frontend/CorresponsaliaBundle/Resources/views/Default/inicio.html.twig
@@ -69,7 +69,7 @@
 {% block body %}
     {{ parent()}}
     <br>
-    <div id="map_canvas" style="width:1000px; height:500px"></div>
+    <div id="map_canvas" style="width: 90%; height:500px"></div>
 
     <script>
       $(document).ready(function() {
