--- a/web/css/general.css
+++ b/web/css/general.css
@@ -22,23 +22,10 @@ line-height            :20px;
 
 }
 .contenedorprincipal{
-	width: 1100px;
-        box-shadow: 0px 2px 0px 2px #999;
-        font-size: 14px;
-        font-family: Georgia;
-}
-
-#contenedor{
-background-color       :white;
-width                  :1100px;
-box-shadow: 0px 2px 0px 2px #999;
-
-}
-
-#banner{
-width                  :1100px;
-height                 :128px;
-box-shadow: 0px 2px 0px 2px #999;
+    background-color       :white;
+    width:                  90%;
+    max-width: 1280px;
+    box-shadow: 0px 2px 0px 2px #999;
 }
 
 .titulo{
