--- a/web/css/login.css
+++ b/web/css/login.css
@@ -11,19 +11,10 @@ body{
 }
 
 .contenedorprincipal{
-    width: 1100px;
-}
-
-
-#contenedor{
     background-color       :white;
-    width                  :1100px;
+    width:                  90%;
+    max-width: 1280px;
     box-shadow: 0px 2px 0px 2px #999;
-}
-
-#banner{
-    width:              1100px;
-    height:             128px;
 }
 
 .titulo{
@@ -44,7 +35,17 @@ body{
     color                  :white;
     font-weight            :bold;
     box-shadow             : 0px 2px 0px 2px #999;
-    width: 1100px;
+}
+
+
+.titulo-banner{
+    color: white;
+    margin-top:         -30px;
+    text-align:         left;
+    padding-left:       133px;
+    font-weight:        bold;
+    font-size: 12px;
+    font-family: Georgia;
 }
 
 .alert{
@@ -52,16 +53,6 @@ body{
     background-color:   #fef780;
     color:              red;
 }
-
-.titulo-banner{
-    color: white;
-    margin-top:         -30px;
-    text-align:         left;
-    padding-left:       116px;
-    font-weight:        bold;
-    height: 30px;
-}
-
 
 
       .form-signin {
