--- a/src/Frontend/CorresponsaliaBundle/Resources/views/Includes/menu.html.twig
+++ b/src/Frontend/CorresponsaliaBundle/Resources/views/Includes/menu.html.twig
@@ -55,12 +55,14 @@
       </li>
       {% endif %}
 
-      {% if is_granted('ROLE_PERSONAL') or is_granted('ROLE_SUPERADMIN') %}
+      {% if is_granted('ROLE_PERSONAL') or is_granted('ROLE_SUPERADMIN') or is_granted('ROLE_RENDICION_CORRESPONSALIA') %}
       <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">PERSONAL <b class="caret"></b></a>
         <ul class="dropdown-menu">
           <li><a href="{{ path('personal') }}">Personal</a></li>
-          <li><a href="{{ path('cargo') }}">Cargos</a></li>
+          {% if is_granted('ROLE_SUPERADMIN') %}
+            <li><a href="{{ path('cargo') }}">Cargos</a></li>
+          {% endif %}
         </ul>
       </li>
       {% endif %}
