--- a/src/Frontend/CorresponsaliaBundle/Resources/views/Tecnologia/Asignacion/reasignar.html.twig
+++ b/src/Frontend/CorresponsaliaBundle/Resources/views/Tecnologia/Asignacion/reasignar.html.twig
@@ -86,12 +86,24 @@
     </script>
     <script type="text/javascript" src="{{ asset('bundles/corresponsalia/Tecnologia/js/Jdatepicker.js') }}"></script>
     <script type="text/javascript" src="{{ asset('bundles/corresponsalia/Tecnologia/js/equipo_new.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('bundles/corresponsalia/Tecnologia/js/effects.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('bundles/corresponsalia/Tecnologia/libs/select2/select2.min.js') }}"></script>
+    <script type="text/javascript">
+        jQuery(document).ready(function() { jQuery(".autocomplete_select").select2(); });
+    </script>
 {% endblock %}
 
 {% block stylesheets %}
     {{ parent() }}
     <link href="{{ asset('bundles/corresponsalia/Tecnologia/css/equipo.css') }}" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="{{ asset('bundles/corresponsalia/Tecnologia/libs/select2/select2.css') }}"/>
     <style type="text/css">
+        .select2-container .select2-choice > .select2-chosen {
+            min-width: 200px !important;
+        }
+        #s2id_tecnologia_asignacion_corresponsalia{
+            width: 400px !important;
+        }
         thead td {
             text-align: center;
         }
@@ -105,13 +117,12 @@
 {% block body -%}
     {{ parent() }}
     
-    {% if form_errors(form.status) or form_errors(form.corresponsalia) or form_errors(form.fechaAsignacion) or form_errors(form.fechaEstimadaRetorno)%}
+    {% if form_errors(form.status) or form_errors(form.corresponsalia) or form_errors(form.fechaAsignacion) %}
     <div class="alert alert-danger errores" style="width:70%;">
         <div><b>Alerta! Ha ocurrido un error en el formulario:</b><br><br></div>
-        <div>Categoria: {{ form_errors(form.status) }}</div>
-        <div>Marca: {{ form_errors(form.corresponsalia) }}</div>
-        <div>Modelo: {{ form_errors(form.fechaAsignacion) }}</div>
-        <div>Serial: {{ form_errors(form.fechaEstimadaRetorno) }}</div>
+        <div>{{ form_errors(form.status) }}</div>
+        <div>{{ form_errors(form.corresponsalia) }}</div>
+        <div>{{ form_errors(form.fechaAsignacion) }}</div>
     </div>
     {% endif %}
     
@@ -122,9 +133,9 @@
                 <legend>ASIGNACION ACTUAL</legend>
                 <tr>
                     <td class="sombra_td"><strong></br>Descripcion del Equipo</strong></td>
-                    <td>Categoria: {{ equipo_actual.categoria }} </br> 
-                      Modelo: {{ equipo_actual.modelo }} </br>
-                      Serial: {{ equipo_actual.serialEquipo }}
+                    <td>Categoria: {{ equipo.categoria }} </br> 
+                      Modelo: {{ equipo.modelo }} </br>
+                      Serial: {{ equipo.serialEquipo }}
                   </td>
                 </tr>
                 <tr>
@@ -138,18 +149,18 @@
             <legend>NUEVA ASIGNACION</legend>
              <div class="contenedorform">
                 <div class="labelform">Tipo de Asignacion:</div>
-                <div class="widgetform">{{ form_widget(form.status) }}</div>
+                <div class="widgetform">{{ form_widget(form.status, {'attr': {'class': 'autocomplete_select'} }) }}</div>
             </div>
             <div class="contenedorform">
                 <div class="labelform">Corresponsalia:</div>
-                <div class="widgetform">{{ form_widget(form.corresponsalia) }}</div>
+                <div class="widgetform">{{ form_widget(form.corresponsalia, {'attr': {'class': 'autocomplete_select'} }) }}</div>
             </div>
             <div class="contenedorform">
                 <div class="labelform">fechaAsignacion:</div>
                 <div class="widgetform">{{ form_widget(form.fechaAsignacion, { 'attr': {'class': 'parent'} }) }}</div>
             </div>
         </div>
-            <input type="hidden" id="tecnologia_asignacion_id" name="tecnologia_asignacion[id]" value="{{ equipo_actual.id }}" />
+            <input type="hidden" id="tecnologia_asignacion_id" name="tecnologia_asignacion[id]" value="{{ equipo.id }}" />
         <input type="submit" value="REASIGNAR" class="btn btn-primary"> | 
         <a class="btn btn-default" href="{{ path('tecnoequipo') }}">IR AL LISTADO</a>
     </form>
