Fase 1: ajuste de bitacora, mejorar html

--- a/src/Frontend/CorresponsaliaBundle/Resources/views/Tecnologia/Asignacion/show.html.twig
+++ b/src/Frontend/CorresponsaliaBundle/Resources/views/Tecnologia/Asignacion/show.html.twig
@@ -43,7 +43,7 @@
         </div>
         <div class="contenedorform">
             <div class="labelform">Responsable:</div>
-            <div class="widgetform">{{ entity.responsable }}aaaaa</div>
+            <div class="widgetform">{{ entity.responsable }}</div>
         </div>
         <div class="contenedorform">
             <div class="labelform">fecha Asignacion:</div>
