--- a/src/Frontend/CorresponsaliaBundle/Resources/views/Tecnologia/Equipo/index.html.twig
+++ b/src/Frontend/CorresponsaliaBundle/Resources/views/Tecnologia/Equipo/index.html.twig
@@ -15,23 +15,31 @@
 {% block stylesheets %}
     {{ parent() }}
     <link rel="stylesheet" href="{{ asset('bundles/corresponsalia/Tecnologia/css/tecno_general.css') }}"/>
+    <style>
+        .prestamo {
+            font-size: 10px;
+            min-width: 80px;
+        }
+    </style>
 {% endblock %}
 
 
 {% block body -%}
     {{ parent() }}
     
-    {% for type, flashMessage in app.session.flashbag.all() %}
-        <div class="alert alert-{{ type }} fade in">
-            <button class="close" data-dismiss="alert" type="button">×</button>
-            {% if flashMessage.title is defined %}
-            <strong>{{ flashMessage.title }}</strong>
-            {{ flashMessage.message }}
-            {% else %}
-            {{ type }}
-            {% endif %}
-        </div>
-    {% endfor %}
+    <div id="flag">
+        {% for type, flashMessage in app.session.flashbag.all() %}
+            <div class="alert alert-{{ type }} fade in">
+                <button class="close" data-dismiss="alert" type="button">×</button>
+                {% if flashMessage.title is defined %}
+                <strong>{{ flashMessage.title }}</strong>
+                {{ flashMessage.message }}
+                {% else %}
+                {{ type }}
+                {% endif %}
+            </div>
+        {% endfor %}
+    </div>
     
     <table id="tablalista" class="table table-bordered table-condensed" style="width: 98.7%;">
         <thead>
@@ -39,9 +47,9 @@
                 <th style="width: 11%;">Categoria</th>
                 <th>Marca</th>
                 <th>Modelo</th>
+                <th>Serial</th>
                 <th style="width: 17%;">Descripción</th>
                 <th style="width: 60px;">Status</th>
-                <th>Asignacion</th>
                 <th>Corresponsalia</th>
                 <th style="width: 13%;">Acciones</th>
             </tr>
@@ -52,17 +60,17 @@
                 <td>{{ entity.categoria }}</td>
                 <td>{{ entity.modelo.marca }}</td>
                 <td>{{ entity.modelo }}</td>
+                <td>
+                    {% if entity|length > 9 %}
+                        {{ entity.serialEquipo|capitalize }}
+                    {% endif %}
+                </td>
                 <td>{{ entity.descripcion }}</td>
                 <td class="centrar">
                     {% if entity.status %}
-                        <span class="label label-success">&nbsp;ACTIVO&nbsp;&nbsp;</span>
+                        <span class="label label-success">&nbsp;Activo&nbsp;&nbsp;</span>
                     {% else %}
-                        <span class="label label-danger">INACTIVO</span>
-                    {% endif %}
-                </td>
-                <td>
-                    {% if entity|length > 9 %}
-                        {{ entity.statusAsignacion.nombre|capitalize }}
+                        <span class="label label-danger">Inactivo</span>
                     {% endif %}
                 </td>
                 <td>{% if entity|length > 9 %}{{ entity.corresponsalia.nombre }}{% endif %}</td>
@@ -72,12 +80,18 @@
                     {% if entity.status %}
                         {% if entity|length > 9 %}
                             {% if entity.statusAsignacion|lower == "prestamo" %}
-                            <a href=""><span class="label label-primary etiqueta prestamo" data-id="{{entity.id}}" data-toggle="modal" data-target="#myModal">&nbsp;PRESTAMO&nbsp;</span></a>
+                            <button type="button" class="btn btn-default btn-xs etiqueta prestamo" data-id="{{entity.id}}" data-toggle="modal" data-target="#myModal">PRESTAMO</button>
+                            <!--<a href=""><span class="label label-primary etiqueta prestamo" data-id="{#--entity.id--#}" data-toggle="modal" data-target="#myModal">&nbsp;PRESTAMO&nbsp;</span></a>-->
+                            {% elseif entity.statusAsignacion|lower == "cobertura" %}
+                                <!--<a href="{#{ path('tecnoasignar_reasignar', {'id':entity.id}) }#}"><span class="label label-primary etiqueta">REASIGNAR</span></a>-->
+                                <button type="button" class="btn btn-default btn-xs etiqueta prestamo" data-id="{{entity.id}}" data-toggle="modal" data-target="#myModal">COBERTURA</button>
                             {% else %}
-                                <a href="{{ path('tecnoasignar_reasignar', {'id':entity.id}) }}"><span class="label label-primary etiqueta">REASIGNAR</span></a>
+                                <!--<a href="{#{ path('tecnoasignar_reasignar', {'id':entity.id}) }#}"><span class="label label-primary etiqueta">REASIGNAR</span></a>-->
+                                <a href="{{ path('tecnoasignar_reasignar', {'id':entity.id}) }}"><span class="btn btn-default btn-xs etiqueta prestamo">REASIGNAR</span></a>
                             {% endif %}
                         {% else %}
-                            <a href="{{ path('tecnoasignar_new', {'id':entity.id}) }}"><span class="label label-primary etiqueta">&nbsp;&nbsp;ASIGNAR&nbsp;&nbsp;&nbsp;</span></a>
+                            <!--<a href="{#{-- path('tecnoasignar_new', {'id':entity.id}) }--#}"><span class="label label-primary etiqueta">&nbsp;&nbsp;ASIGNAR&nbsp;&nbsp;&nbsp;</span></a>-->
+                            <a href="{{ path('tecnoasignar_new', {'id':entity.id}) }}"><span class="btn btn-default btn-xs etiqueta prestamo">ASIGNAR</span></a>
                         {% endif %}
                     {% endif %}
                  </td> 
@@ -134,7 +148,9 @@
                 url: '{{ path("tecnoequipo_fretorno") }}',
                 data: datos,
                 success: function(response) {
-                    alert(response);
+                    alert("Hola");
+                    jQuery('#myModal').modal('hide');
+                    jQuery("#flag").html(response);
                 }
             });
         });
